# mdbook-paisano-preprocessor

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  book.toml  flake.nix
.github/: settings.yml
docs/: book.toml
nix/app/: package.nix
nix/repo/: config.nix  rust.nix  shell.nix
src/: install.rs  lib.rs  main.rs  reference.rs
templates/: block.md  cell.md  target.md
