[package]
name = "mdbook-paisano-preprocessor"
version = "0.4.0"
authors = ["The Paisano Authors"]
description = "Yield documentation from Paisano-based projects into MdBook."
edition = "2021"
keywords = ["mdbook", "proprocessor", "paisano", "nix"]
readme = "README.md"
repository = "https://github.com/paisano-nix/mdbook-paisano-preprocessor"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.69"
mdbook = { version = "0.4.21", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["std"] }
toml = "0.7.2"
askama = "0.11.1"
toml_edit = { version = "0.19.3", optional = true }
env_logger = { version = "0.10.0", default_features = false, optional = true }
log = { version = "0.4.17", optional = true }
clap = { version = "4.1.1", default_features = false, features = [
  "std",
  "derive"
], optional = true }
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"

[features]
default = ["cli", "cli-install"]
# Enable the command line binary
cli = ["clap", "env_logger", "log"]
# Enable installation of files and configuration
cli-install = ["toml_edit"]
